BUGFIX:SSF-38 - fixed the issue with the size of the popup being to large on-load - added overflow scroll. Altered the header and tabs to match the style of edit profile.

--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -1176,11 +1176,11 @@ form.member-profile-form {
 	border-radius: $grid-y;
   overflow: visible;
   padding: 0;
-
+ 
   // Titlebar for pop-up dialog.
 	.ui-dialog-titlebar.ui-widget-header {
 	  	font-size: $font-base-size+2;
-		padding: $grid-y/2 $grid-x/2 $grid-y/2 $grid-x*2;
+		padding: 0;
 		border:none;
 		background: {
 			color:transparent;
@@ -1188,12 +1188,15 @@ form.member-profile-form {
 			repeat:repeat;	
 		}
 		@include box-shadow($color-shadow-dark 0 0 ($grid-x / 2) inset);
+		.ui-dialog-title {
+			position:absolute;
+		}
 	}
 
 	.cms-dialog-content {
 		background: url("../images/textures/bg_cms_main_content.png") repeat left top #F0F3F4;
 		padding-bottom: $grid-y;
-		overflow:visible;
+		padding-top:0px;
 
 		.Actions {
 			overflow: auto;
@@ -1216,12 +1219,13 @@ form.member-profile-form {
 				.ui-tabs-nav {
 					border: none;
 					padding: 0 $grid-x*5 0 0; //allows for 40px gap to the right of tabs to match the tabs on main CMS
-					float: right;
-					margin-top:-44px;
+					float:right;
 
 					li {	
+						margin:0;
 						&.ui-tabs-selected {
 							margin-bottom: -1px;
+							padding-bottom:11px;
 						}
 
 						&:first-child {
@@ -1288,6 +1292,8 @@ form.member-profile-form {
 				.ui-tabs-panel {
 					background: url("../images/textures/bg_cms_main_content.png") repeat left top #F0F3F4;
 					overflow-x:hidden;
+					clear:both;
+					border-top: 1px solid darken($color-tab, 20%);
 				}
 			}
 		}
@@ -1308,23 +1314,6 @@ body.cms-dialog {
 	overflow: auto;
 	background: url("../images/textures/bg_cms_main_content.png") repeat left top #F0F3F4;
 }
-
-.ui-dialog.edit-profile-popup {
-	.ui-dialog-titlebar {
-		height:0px; //removes the header outside of the iframe on edit profile popup. 
-		padding:0 4px 0 16px;
-
-		.ui-dialog-title {
-			position:absolute;
-		}
-	}
-	.ss-ui-dialog {
-		padding-right:0px;
-	}
-}
-
-
-
 
 /** --------------------------------------------
  * "Insert X" forms
